--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -3,22 +3,22 @@
 
 // colors
 [data-dark="false"] {
-  --primary: #0795d9;
-  --secondary: #7dd3fc;
-  --text: #000000;
+  --primary: #7BAFD4;
+  --secondary: #4B9CD3;
+  --text: #13294B;
   --background: #ffffff;
-  --background-alt: #fafafa;
-  --light-gray: #e0e0e0;
+  --background-alt: #F8F8F8;
+  --light-gray: #E1E1E1;
   --gray: #808080;
-  --dark-gray: #404040;
+  --dark-gray: #767676;
   --overlay: #00000020;
 }
 [data-dark="true"] {
-  --primary: #0795d9;
-  --secondary: #075985;
+  --primary: #7BAFD4;
+  --secondary: #4B9CD3;
   --text: #ffffff;
   --background: #181818;
-  --background-alt: #1c1c1c;
+  --background-alt: #13294B;
   --light-gray: #404040;
   --gray: #808080;
   --dark-gray: #b0b0b0;
@@ -27,9 +27,9 @@
 
 :root {
   // font families
-  --title: "Barlow", sans-serif;
-  --heading: "Barlow", sans-serif;
-  --body: "Barlow", sans-serif;
+  --title: "Libre Baskerville", sans-serif;
+  --heading: "Open Sans", sans-serif;
+  --body: "Open Sans", sans-serif;
   --code: "Roboto Mono", monospace;
 
   // font sizes
